syntax = "proto3";

package hipstershop.v1;

import "proto/demo_base.proto";

option go_package = "protobuf;v1";


service CheckoutService {
    rpc PlaceOrder (PlaceOrderRequest) returns (PlaceOrderResponse);
}


message PlaceOrderRequest {
    string user_id = 1;
    string user_currency = 2 ;
    v1.Address address = 3;
    string email = 5;
    CreditCardInfo credit_card = 6;
}

message PlaceOrderResponse {
    OrderResult order = 1;
}